--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title></title>
   </head>
   <body>
-    tatsuki nakatake 2000/03/22
-    mikan
+    tatsuki nakatake 2000/03/22 <br>
+    mikan <br>
+    <b>大文字</b>
+
   </body>
 </html>
