--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="bg.css" type="text/css">
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-    tatsuki nakatake 2000/03/22 <br>
-    mikan <br>
-    <b>大文字</b>
+    <div class="inner">
+      <br><br><br>
+      <p class="textsize">tatsuki nakatake</p><br>
+      2000/03/22 <br>
+      好きな食べ物：ココナッツサブレ<br>
 
+
+    </div>
   </body>
 </html>
